Add shadow plugin for packaging uber jar.